--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
         <script>
             const src = document.body, dst = window;
             setTimeout(() => {
-                // debugger;
-                const t = tree(src, dst, 7);
+                const t = tree(src, dst);
                 console.log(treeify.asTree(t));
             });
         </script>
