--- a/demo/index.html
+++ b/demo/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="https://unpkg.com/treeify/treeify.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/treeify/treeify.js"></script>
 
         <script src="../walk.js"></script>
         <script src="../tree.js"></script>
