--- a/demo/tree/index.html
+++ b/demo/tree/index.html
@@ -1,17 +1,51 @@
 <html>
     <head>
-        <script src="https://cdn.jsdelivr.net/npm/treeify/treeify.js"></script>
-
-        <script src="../../walk.js"></script>
-        <script src="./tree.js"></script>
-
         <script>
-            (function(){
-                const src = './examples/' + location.search.substr(1) + '.js';
+            top.modules = {};
+            function srcToModule(src) {
+                const parts = src.split('/');
+                const module = './' + parts[parts.length - 1].split('.js')[0];
+                return module;
+            }
+            function require(src) {
+                return top.modules[srcToModule(src)].exports;
+            }
+            async function load(src) {
+                const res = await fetch(src);
+                let js = await res.text();
+                const script = document.createElement('script');
+                script.textContent = `
+                top.modules['${srcToModule(src)}'] = (function(){
+                    const module = {};
+                    ${js}
+                    return module;
+                }());
+                `;
+                document.head.appendChild(script);
+            }
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/treeify/treeify.js"></script>
+        <script>
+            // load walker
+            (async function(){
+                await load('../../src/options.js');
+                await load('../../src/properties.js');
+                await load('../../src/ignores.js');
+                await load('../../src/walk.js');
+                await load('./tree.js');
+            }());
+        </script>
+        <script></script>
+        <script>
+            // load demo
+            function start(){
+                const demo = location.search.substr(1);
+                const src = './examples/' + demo + '.js';
                 const script = document.createElement('script');
                 script.src = src;
                 document.head.appendChild(script);
-            }());
+            }
+            setTimeout(start, 100);
         </script>
     </head>
     <body>
