--- a/demo/index.html
+++ b/demo/index.html
@@ -1,2 +1,3 @@
 <h1>walker demos</h1>
 <li><a href="./tree/index.html">tree</a></li>
+<li><a href="./walkAndSearch/index.html">walkAndSearch</a></li>
