--- a/demo/walkAndSearch/index.html
+++ b/demo/walkAndSearch/index.html
@@ -25,7 +25,7 @@
             }
         </script>
         <script>
-            // load walker
+            // load lavatube
             (async function(){
                 await load('../../src/options.js');
                 await load('../../src/properties.js');
