--- a/demo/tree/index.html
+++ b/demo/tree/index.html
@@ -26,7 +26,7 @@
         </script>
         <script src="https://cdn.jsdelivr.net/npm/treeify/treeify.js"></script>
         <script>
-            // load walker
+            // load lavatube
             (async function(){
                 await load('../../src/options.js');
                 await load('../../src/properties.js');
