move built bundles to dist/ dir

--- a/demo/tree/index.html
+++ b/demo/tree/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <script src="https://cdn.jsdelivr.net/npm/treeify/treeify.js"></script>
-        <script src="../../lavatube.js"></script>
+        <script src="../../dist/lavatube.js"></script>
         <script>
             // load demo
             function start(){
