--- a/demo/walkAndSearch/index.html
+++ b/demo/walkAndSearch/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="../../dist/lavatube.js"></script>
+        <script src="../dist/lavatube.js"></script>
         <script>
             // load demo
             function walkAndSearch(start, end){
