--- a/demo/tree/index.html
+++ b/demo/tree/index.html
@@ -1,19 +1,6 @@
 <html>
     <head>
         <script src="https://cdn.jsdelivr.net/npm/treeify/treeify.js"></script>
-        <script>
-            // load demo
-            function start(){
-                const demo = location.search.substr(1);
-                if (!demo) return;
-                const src = './examples/' + demo + '.js';
-                const script = document.createElement('script');
-                script.src = src;
-                script.type = 'module';
-                document.head.appendChild(script);
-            }
-            setTimeout(start, 100);
-        </script>
     </head>
     <body>
         <b>demos:</b>
@@ -36,5 +23,6 @@
                 localStorage.limit = limit.value;
             }
         </script>
+        <script type="module" src="./index.js"></script>
     </body>
 </html>
